# mpu6050-3d-visualizer

./: .gitignore  CMakeLists.txt  ESP32_mpu6050.c  ESP32_mpu6050_wifi.c  README.md
docs/superpowers/plans/: 2026-04-28-bluetooth-module.md
docs/superpowers/specs/: 2026-04-28-bluetooth-module-design.md
src/: AttitudeEstimator.cpp  AttitudeEstimator.h  BluetoothManager.cpp  BluetoothManager.h  ChartPanel.cpp  ChartPanel.h  DataPanel.cpp  DataPanel.h  MainWindow.cpp  MainWindow.h  Model3DWidget.cpp  Model3DWidget.h  ObjLoader.cpp  ObjLoader.h  RollingBuffer.h  SensorData.h  SensorDataParser.cpp  SensorDataParser.h  TcpManager.cpp  TcpManager.h  main.cpp
